--- a/clash/bloody_grail.tex
+++ b/clash/bloody_grail.tex
@@ -29,7 +29,7 @@ This scenario is played over 13 rounds.
 
 \textbf{Town Buildings:} \svg{bronze} Dwelling
 
-\textbf{Map tile Pool:} Each player takes 2 random Far (II-III) Map tiles, one of which must contain a Settlement
+\textbf{Map tile Pool:} Each player takes 2 random Far (II--III) Map tiles, one of which must contain a Settlement
 
 \textbf{Additional Bonus:} None
 
@@ -39,17 +39,17 @@ Take the following Map tiles and arrange them as shown in the scenario map layou
 \textbf{For a 2-player scenario:}
 \begin{itemize}
   \item 2 × Starting (I) Map tile
-  \item 4 × Near (IV-V) Map tile, all of which must contain an Obelisk
-  \item 4 × Far (II-III) Map tile, 2 of which must contain a Settlement
-  \item 1 × Center (VI-VII) Map tile, which must contain the Grail field
+  \item 4 × Near (IV--V) Map tile, all of which must contain an Obelisk
+  \item 4 × Far (II--III) Map tile, 2 of which must contain a Settlement
+  \item 1 × Center (VI--VII) Map tile, which must contain the Grail field
 \end{itemize}
 
 \textbf{For a 4-player scenario:}
 \begin{itemize}
   \item 4 × Starting (I) Map tile
-  \item 6 × Near (IV-V) Map tile, 4 of which must contain an Obelisk
-  \item 8 × Far (II-III) Map tile, 4 of which must contain a Settlement
-  \item 1 × Center (VI-VII) Map tile, which must contain the Grail field
+  \item 6 × Near (IV--V) Map tile, 4 of which must contain an Obelisk
+  \item 8 × Far (II--III) Map tile, 4 of which must contain a Settlement
+  \item 1 × Center (VI--VII) Map tile, which must contain the Grail field
 \end{itemize}
 
 \textbf{\MakeUppercase{Note:}} Before placing the Near tiles, separate them into 2 piles (with and without an Obelisk). Place them alternately so that the tiles with an Obelisk are not placed adjacent to each other.
@@ -58,13 +58,13 @@ Take the following Map tiles and arrange them as shown in the scenario map layou
 To win the scenario, a Hero must obtain the Grail token and bring it to their faction Town.
 
 \subsection*{\MakeUppercase{Defeat Conditions}}
-If the Grail is not obtained at least once by the end of the 13th round, the game ends, and all players lose the scenario.
+If the Grail is not obtained at least once by the end of the \nth{13} round, the game ends, and all players lose the scenario.
 
-If the Grail token has been obtained, the players gain additional time (until the end of the 16th round) to bring the Grail to their faction's Town. Otherwise, all players lose the scenario.
+If the Grail token has been obtained, the players gain additional time (until the end of the \nth{16} round) to bring the Grail to their faction's Town. Otherwise, all players lose the scenario.
 
 \subsection*{\MakeUppercase{Timed Events}}
 
-\textbf{6$^{th}$, 9$^{th}$ and 12$^{th}$ Rounds:}
+\textbf{\nth{6}, \nth{9} and \nth{12} Rounds:}
 \begin{itemize}
   \item Remove all Black cubes from every Water Wheel and Windmill on the map.
   \item All players possessing the title of ``\textcolor{darkcerulean}{Grail Knight}'' gain \svg{morale_positive}.
