--- a/translations/bloody_grail.tex/cs.po
+++ b/translations/bloody_grail.tex/cs.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2024-06-29 16:13+0200\n"
+"POT-Creation-Date: 2024-07-02 23:55+0100\n"
 "PO-Revision-Date: 2024-06-29 16:13+0200\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -19,7 +19,9 @@ msgstr ""
 #. type: multicols*
 #: coops/sentinels.tex:5 coops/titans_stronghold.tex:5
 #: coops/emerald_island.tex:5 clash/bloody_grail.tex:5 clash/the_hunt.tex:5
-#: sections/credits.tex:10
+#: campaigns/inferno_devilish_plan.tex:6
+#: campaigns/inferno_steadwicks_fall.tex:5
+#: campaigns/inferno_deal_with_the_devil.tex:5 sections/credits.tex:10
 #, no-wrap
 msgid ""
 "{2}\n"
@@ -29,6 +31,9 @@ msgstr ""
 #. type: multicols*
 #: coops/sentinels.tex:69 coops/titans_stronghold.tex:70
 #: coops/emerald_island.tex:60 clash/bloody_grail.tex:66 clash/the_hunt.tex:67
+#: campaigns/inferno_devilish_plan.tex:114
+#: campaigns/inferno_steadwicks_fall.tex:134
+#: campaigns/inferno_deal_with_the_devil.tex:120
 #, no-wrap
 msgid ""
 "\\subsection*{\\MakeUppercase{Timed Events}}\n"
@@ -112,7 +117,8 @@ msgid ""
 msgstr ""
 
 #. type: multicols*
-#: clash/bloody_grail.tex:23
+#: clash/bloody_grail.tex:23 campaigns/inferno_devilish_plan.tex:32
+#: campaigns/inferno_deal_with_the_devil.tex:30
 #, no-wrap
 msgid ""
 "\\textbf{Starting Income:}\\par\n"
@@ -136,7 +142,7 @@ msgstr ""
 #: clash/bloody_grail.tex:33
 #, no-wrap
 msgid ""
-"\\textbf{Map tile Pool:} Each player takes 2 random Far (II-III) Map tiles, one of which must contain a Settlement\n"
+"\\textbf{Map tile Pool:} Each player takes 2 random Far (II--III) Map tiles, one of which must contain a Settlement\n"
 "\n"
 msgstr ""
 
@@ -156,9 +162,9 @@ msgid ""
 "\\textbf{For a 2-player scenario:}\n"
 "\\begin{itemize}\n"
 "  \\item 2 × Starting (I) Map tile\n"
-"  \\item 4 × Near (IV-V) Map tile, all of which must contain an Obelisk\n"
-"  \\item 4 × Far (II-III) Map tile, 2 of which must contain a Settlement\n"
-"  \\item 1 × Center (VI-VII) Map tile, which must contain the Grail field\n"
+"  \\item 4 × Near (IV--V) Map tile, all of which must contain an Obelisk\n"
+"  \\item 4 × Far (II--III) Map tile, 2 of which must contain a Settlement\n"
+"  \\item 1 × Center (VI--VII) Map tile, which must contain the Grail field\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
@@ -170,9 +176,9 @@ msgid ""
 "\\textbf{For a 4-player scenario:}\n"
 "\\begin{itemize}\n"
 "  \\item 4 × Starting (I) Map tile\n"
-"  \\item 6 × Near (IV-V) Map tile, 4 of which must contain an Obelisk\n"
-"  \\item 8 × Far (II-III) Map tile, 4 of which must contain a Settlement\n"
-"  \\item 1 × Center (VI-VII) Map tile, which must contain the Grail field\n"
+"  \\item 6 × Near (IV--V) Map tile, 4 of which must contain an Obelisk\n"
+"  \\item 8 × Far (II--III) Map tile, 4 of which must contain a Settlement\n"
+"  \\item 1 × Center (VI--VII) Map tile, which must contain the Grail field\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
@@ -199,7 +205,7 @@ msgstr ""
 #, no-wrap
 msgid ""
 "\\subsection*{\\MakeUppercase{Defeat Conditions}}\n"
-"If the Grail is not obtained at least once by the end of the 13th round, the game ends, and all players lose the scenario.\n"
+"If the Grail is not obtained at least once by the end of the \\nth{13} round, the game ends, and all players lose the scenario.\n"
 "\n"
 msgstr ""
 
@@ -207,7 +213,7 @@ msgstr ""
 #: clash/bloody_grail.tex:64
 #, no-wrap
 msgid ""
-"If the Grail token has been obtained, the players gain additional time (until the end of the 16th round) to bring the Grail to their faction's Town. Otherwise, all players lose the scenario.\n"
+"If the Grail token has been obtained, the players gain additional time (until the end of the \\nth{16} round) to bring the Grail to their faction's Town. Otherwise, all players lose the scenario.\n"
 "\n"
 msgstr ""
 
@@ -215,7 +221,7 @@ msgstr ""
 #: clash/bloody_grail.tex:73
 #, no-wrap
 msgid ""
-"\\textbf{6$^{th}$, 9$^{th}$ and 12$^{th}$ Rounds:}\n"
+"\\textbf{\\nth{6}, \\nth{9} and \\nth{12} Rounds:}\n"
 "\\begin{itemize}\n"
 "  \\item Remove all Black cubes from every Water Wheel and Windmill on the map.\n"
 "  \\item All players possessing the title of ``\\textcolor{darkcerulean}{Grail Knight}'' gain \\svg{morale_positive}.\n"
