--- a/main_pl.tex
+++ b/main_pl.tex
@@ -3,6 +3,7 @@
 % Languages
 \usepackage[T1]{fontenc}
 \usepackage[polish]{babel}
+\usepackage{fontspec}
 
 \def\sections{sections/translated/pl}
 \def\coopspath{coops/translated/pl}
