--- a/metadata.tex
+++ b/metadata.tex
@@ -160,12 +160,22 @@
 \enspace SECTION \thesection\enspace}
 {8pt}
 {\Huge\bfseries\filcenter\uppercase}
-%Create section heading with graphics. Argument one is heading name, argument two is picture to use on the left.
-\providecommand{\sectionheadertext}[1]{
-  \fontfamily{ptm}\selectfont{
-    \color{antiquewhite} \section*{\MakeUppercase{#1}}
-  }
+
+\newfontfamily{\liberation}{LiberationSerif}
+[
+  Path = ./assets/fonts/,
+  Extension = .ttf,
+  UprightFont = *-Regular,
+  ItalicFont = *-Italic,
+  BoldFont = *-Bold,
+  BoldItalicFont = *-BoldItalic
+]
+
+\newcommand{\sectionheadertext}[2][antiquewhite]{
+  \color{#1}\MakeUppercase{\textbf{\liberation #2}}
 }
+
+%Create section heading with graphics. Argument one is heading name, argument two is picture to use on the left.
 \newcommand{\addsection}[2]{
   \vspace*{-5em}
   \hspace*{-1em}
@@ -180,14 +190,13 @@
   \begin{fullwidth}[leftmargin=0.16\textwidth, outermargin=0.16\textwidth, innermargin=0.16\textwidth]
     \begin{center}
       \vspace*{\lang_header_adjustment}
-      \sectionheadertext{#1}
+      \section*{\sectionheadertext{#1}}
       \cleardoublepage\phantomsection\addcontentsline{toc}{section}{\protect\numberline{}#1}
     \end{center}
   \end{fullwidth}
   \vspace{1.75em}
 }
 %End of create section heading.
-
 
 % Add title page for scenario type
 \newcommand{\addscenariogroup}[2]{
@@ -204,9 +213,7 @@
       \includegraphics[width=\linewidth, keepaspectratio]{\layout/grouping_heading.png}
     };
     \node(title)[minimum width = \paperwidth, anchor=center] at (current page.center) {
-      \fontfamily{ptm}\selectfont{
-        \color{bistre} \Huge\bfseries\filcenter\MakeUppercase{#1}
-      }
+      \huge\sectionheadertext[bistre]{#1}
     };
   \end{tikzpicture}
 }
@@ -265,9 +272,9 @@
   \begin{fullwidth}[leftmargin=0.2\textwidth]
     \begin{center}
       \vspace{-12pt}
-      \sectionheadertext{\small{\sotitle{#3}}}
+      \section*{\sectionheadertext{\small{\sotitle{#3}}}}
       \vspace{-10pt}
-      \sectionheadertext{#4}
+      \section*{\sectionheadertext{#4}}
       \ifthenelse{\oneliner}{}{\vspace{14pt}}
       \cleardoublepage\phantomsection\addcontentsline{toc}{#1}{\protect\numberline{} {} {} {} {}#4}
     \end{center}
