--- a/translations/emerald_island.tex/pl.po
+++ b/translations/emerald_island.tex/pl.po
@@ -149,6 +149,8 @@ msgid ""
 "\\addscenariosection{1}{Cooperative scenario}{Emerald Island}{\\images/"
 "logistics.png}"
 msgstr ""
+"\\addscenariosection{1}{Tryb Kooperacyjny}{Wyspa Szmaragdów}{\\images/"
+"logistics.png}"
 
 #. type: multicols*
 #: coops/emerald_island.tex:9
@@ -157,6 +159,8 @@ msgid ""
 "\\textbf{Source:} \\href{https://discord.com/channels/740870068178649108/1222679455261261986}{Archon Studio Discord}\n"
 "\n"
 msgstr ""
+"\\textbf{Źródło:} \\href{https://discord.com/channels/740870068178649108/1222679455261261986}{Discord Archon Studio}\n"
+"\n"
 
 #. type: multicols*
 #: coops/emerald_island.tex:14
@@ -168,6 +172,11 @@ msgid ""
 "\\subsection*{\\MakeUppercase{Scenario Length}}\n"
 "\n"
 msgstr ""
+"\\textit{Lord Markham postanowił zorganizować polowanie na skarby, a ty i twoi przyjaciele weźmiecie w nim udział.\n"
+"  Ale pośpieszcie się! Inne drużyny też są na tropie, a jedna z nich jest już prawie na mecie!\n"
+"  A przede wszystkim uważajcie: wygląda na to, że na tej wyspie czai się stworzenie zidentyfikowane jako smok!}\n"
+"\\subsection*{\\MakeUppercase{Długość scenariusza}}\n"
+"\n"
 
 #. type: multicols*
 #: coops/emerald_island.tex:16
@@ -176,18 +185,17 @@ msgid ""
 "This scenario is played over 8 rounds.\n"
 "\n"
 msgstr ""
+"Ten scenariusz jest rozgrywany w 8 rundach.\n"
+"\n"
 
 #. type: multicols*
 #: coops/emerald_island.tex:20
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\textbf{Player Count:} 1 - 6\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\textbf{Player Count:} 1 -- 4\n"
 "\n"
 msgstr ""
-"\\textbf{Liczba Graczy:} 1 - 6\n"
+"\\textbf{Liczba Graczy:} 1 -- 4\n"
 "\n"
 
 #. type: multicols*
@@ -198,6 +206,9 @@ msgid ""
 "\\resources{5}{2}{1}\n"
 "\n"
 msgstr ""
+"\\textbf{Zasoby Początkowe:}\\par\n"
+"\\resources{5}{2}{1}\n"
+"\n"
 
 #. type: multicols*
 #: coops/emerald_island.tex:26
@@ -207,6 +218,9 @@ msgid ""
 "\\resources{10}{0}{1}\n"
 "\n"
 msgstr ""
+"\\textbf{Początkowy Przychód:}\\par\n"
+"\\resources{10}{0}{1}\n"
+"\n"
 
 #. type: multicols*
 #: coops/emerald_island.tex:34 clash/bloody_grail.tex:31
@@ -224,18 +238,11 @@ msgstr ""
 msgid ""
 "\\textbf{Map tile Pool:} If you wish, you can distribute the II--III tiles equally to each player rather than laying them out as proposed.\n"
 "\n"
-msgstr ""
+msgstr "\\textbf{Pula Kafelków Mapy:} Jeśli chcesz, możesz równomiernie rozdać płytki II--III każdemu z graczy, zamiast układać je zgodnie z proponowanym układem.\n"
 
 #. type: multicols*
 #: coops/emerald_island.tex:48
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\textbf{(1*P) Starting (I) Map tile}\n"
-#| "\\begin{itemize}\n"
-#| "  \\item Starting Tiles of your chosen factions.\n"
-#| "  \\item Ignore their yellow borders.\n"
-#| "\\end{itemize}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "$\\boldsymbol{P}$ \\textbf{× Starting (I) Map tile}\n"
 "\\begin{itemize}\n"
@@ -244,24 +251,21 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\textbf{(1*G) Początkowy (I) Kafelek Mapy}\n"
+"$\\boldsymbol{G}$ \\textbf{× Początkowy (I) Kafelek Mapy}\n"
 "\\begin{itemize}\n"
 "  \\item Początkowe Kafelki wybranych frakcji.\n"
-"  \\item Zignoruj ich żółte granice.\n"
+"  \\item Zignoruj żółte granice pomiędzy Kafelkami I (ale nie pomiędzy Kafelkami II--III).\n"
 "\\end{itemize}\n"
 "\n"
 
 #. type: multicols*
 #: coops/emerald_island.tex:50
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\textbf{(2*P) × Far (II-III) Map tile}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "$\\boldsymbol{4 P}$ \\textbf{× Far (II--III) Map tile}\n"
 "\n"
 msgstr ""
-"\\textbf{(2*G) × Daleki (II-III) Kafelek Mapy}\n"
+"$\\boldsymbol{4 G}$ \\textbf{× Daleki (II-III) Kafelek Mapy}\n"
 "\n"
 
 #. type: multicols*
@@ -271,6 +275,8 @@ msgid ""
 "Flag all Mines and Settlements. (Don't forget the building materials Mine in tile I. Each tile II--III contains one Mine or Settlement with a level III fight.)\n"
 "\n"
 msgstr ""
+"Oflaguj wszystkie Kopalnie i Osady. (Nie zapomnij o Kopalni budulców na kafelku I. Każdy kafelek II--III zawiera jedną Kopalnię lub Osadę z walką na poziomie III.)\n"
+"\n"
 
 #. type: multicols*
 #: coops/emerald_island.tex:58
@@ -279,17 +285,12 @@ msgid ""
 "There are unflagged Mines or Settlements left in map at the end of Round 8.\n"
 "\n"
 msgstr ""
+"Na mapie pozostały nieoflagowane Kopalnie lub Osady na koniec Rundy 8.\n"
+"\n"
 
 #. type: multicols*
 #: coops/emerald_island.tex:65
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\textbf{10$^{th}$ Round:}\n"
-#| "\\begin{itemize}\n"
-#| "  \\item Repeat the Timed Events of Rounds \\mbox{7 and 8.}\n"
-#| "\\end{itemize}\n"
-#| "\\vspace{-0.5em}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\textbf{\\nth{5} Round:}\n"
 "\\begin{itemize}\n"
@@ -297,11 +298,10 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\textbf{10$^{th}$ Round:}\n"
+"\\textbf{Runda 5.:}\n"
 "\\begin{itemize}\n"
-"  \\item Repeat the Timed Events of Rounds \\mbox{7 and 8.}\n"
+"  \\item Zyskaj nagrodę jednego pola z Czarną Kostką.\n"
 "\\end{itemize}\n"
-"\\vspace{-1.5em}\n"
 "\n"
 
 #. type: multicols*
@@ -330,6 +330,27 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
+"\\subsection*{\\MakeUppercase{Dodatkowe Zasady}}\n"
+"\\begin{itemize}\n"
+"    \\item Nie możesz zbudować \\svgunit{golden} Siedliska.\n"
+"    \\item Możesz przekazywać jednostki innemu graczowi, nawet poza swoją turą, jeśli jeden z twoich Bohaterów jest:\n"
+"    \\begin{itemize}\n"
+"        \\item Na tym samym kafelku mapy co bohater innego gracza.\n"
+"        \\item W mieście innego gracza.\n"
+"        \\item Obok bohatera innego gracza.\n"
+"    \\end{itemize}\n"
+"    \\item Jeśli nie masz jednostek w swojej talii jednostek (po walce lub jeśli nie zachowasz co najmniej jednej jednostki), zwróć wszystkie swoje jednostki do puli jednostek twojej frakcji (nawet jeśli inny gracz ma jedną lub więcej twoich jednostek). Obejmuje to jednostki, które wcześniej przekazałeś innemu graczowi.\n"
+"    \\item Będąc w mieście innego gracza, możesz rekrutować lub wzmacniać ich jednostki, albo dla nich, albo dla siebie. Potrzebujesz na to zgody innego gracza. Odpowiednie Siedliska lub Cytadela muszą być zbudowane.\n"
+"    \\item Do ostatniej walki o Kopalnię/Osadę dodaj Neutralną \\svgunit{golden} Jednostkę. Masz nieograniczoną liczbę rund na tę walkę. Nie możesz użyć Mistrzowskiej Dyplomacji, aby pominąć tę walkę!\n"
+"    \\item Przy pierwszym osiągnięciu poziomu IV, zdobądź swoją drugą specjalizację.\n"
+"    \\item Po osiągnięciu poziomu IV, przenieś swoją kostkę na liczniku poziomów na poziom III.\n"
+"    \\item Dodatkowo, żaden gracz nie może:\n"
+"    \\begin{itemize}\n"
+"        \\item Atakować innych bohaterów.\n"
+"        \\item Przejąć Kopalni lub Osady, która jest już Oflagowana.\n"
+"    \\end{itemize}\n"
+"\\end{itemize}\n"
+"\n"
 
 #. type: multicols*
 #: coops/emerald_island.tex:88
@@ -358,3 +379,17 @@ msgid ""
 "\\end{center}\n"
 "\n"
 msgstr ""
+"\\begin{center}\n"
+"  \\includegraphics[width=0.2\\paperwidth]{\\_assets/maps/emerald-1.png}\n"
+"  \\captionof{figure}{SCENARIUSZ JEDNOOSOBOWY}\n"
+"  \\vspace{3em}\n"
+"  \\includegraphics[width=0.3\\paperwidth]{\\_assets/maps/emerald-2.png}\n"
+"  \\captionof{figure}{SCENARIUSZ DWUOSOBOWY}\n"
+"  \\vspace{3em}\n"
+"  \\includegraphics[width=0.3\\paperwidth]{\\_assets/maps/emerald-3.png}\n"
+"  \\captionof{figure}{SCENARIUSZ TRZYOSOBOWY}\n"
+"  \\vspace{3em}\n"
+"  \\includegraphics[width=0.3\\paperwidth]{\\_assets/maps/emerald-4.png}\n"
+"  \\captionof{figure}{SCENARIUSZ CZTEROOSOBOWY}\n"
+"\\end{center}\n"
+"\n"
